Styled button, fixed some spacing

--- a/src/components/Result/Result.module.css
+++ b/src/components/Result/Result.module.css
@@ -1,3 +1,7 @@
+.resultContainer {
+	margin-bottom: 15%;
+}
+
 .result {
 	background: #eeeeee;
 	border-radius: 20px;
