--- a/src/components/UI/Input/AdvancedInput/AdvancedInput.module.css
+++ b/src/components/UI/Input/AdvancedInput/AdvancedInput.module.css
@@ -7,7 +7,6 @@
 	background: #eeeeee;
 	border-radius: 20px;
 	width: 100%;
-	/* height: 100%; */
 	color: #212121;
 	font-weight: 500;
 	margin-top: 12px;
@@ -31,7 +30,26 @@
 }
 
 .button {
-	width: 80px;
-	display: flex;
-	justify-content: space-around;
+
+
+	display: inline-block;
+	background-color: #eeeeee;
+	border-radius: 20px;
+	border: 4px double #cccccc;
+	color: #000000;
+	text-align: center;
+	font-size: 20px;
+	width: 100%;
+	/* -webkit-transition: all 0.5s;
+	-moz-transition: all 0.5s;
+	-o-transition: all 0.5s;
+	transition: all 0.5s; */
+	cursor: pointer;
+	margin-top: 20px;
+	padding: 5px;
 }
+
+.button:hover {
+	background-color: #e53935;
+	color: #ffffff;
+  }
